syntax = "proto3";

package fricon.v1alpha;

service FriconService {
  /*
   * Get the version of the Fricon service.
   */
  rpc Version(VersionRequest) returns (VersionResponse) {}
}

message VersionRequest {}

message VersionResponse {
  string version = 1;
}
